[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/texture_09.png" type="Texture" id=1]
[ext_resource path="res://powers/bomb.gd" type="Script" id=2]
[ext_resource path="res://assets/bomb.glb" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=2]
rough = true
bounce = 0.1
absorbent = true

[sub_resource type="SphereShape" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_texture = ExtResource( 1 )

[sub_resource type="SphereShape" id=6]

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ball/bomb:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "end"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Ball/bomb:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, true ]
}

[node name="bomb" type="Spatial"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )
script = ExtResource( 2 )

[node name="original_pos" type="Spatial" parent="."]

[node name="Ball" type="RigidBody" parent="."]
physics_material_override = SubResource( 2 )
gravity_scale = 10.0
angular_damp = 5.0

[node name="bomb" parent="Ball" instance=ExtResource( 3 )]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ball"]
shape = SubResource( 3 )

[node name="DebugMesh" type="MeshInstance" parent="Ball"]
visible = false
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Area" type="Area" parent="Ball"]

[node name="CollisionShape" type="CollisionShape" parent="Ball/Area"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/end = SubResource( 7 )

[connection signal="body_entered" from="Ball/Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
